Fix vertical alignment of tabs

--- a/src/jukebox/static/style.css
+++ b/src/jukebox/static/style.css
@@ -20,6 +20,7 @@ body {
     height: 32px;
 }
 #tabs li {
+    float: left;
     display: inline-block;
     font-family: inherit;
     font-size: 14pt;
